[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Other_Scenes/Memo.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Puzzles_General/GFX/memo_Screen.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Other_Scenes/ColorPicker.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 352, 248.5 )

[node name="Memo" type="Node2D"]
z_index = 10
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 399, 301.5 )
z_index = 2
shape = SubResource( 1 )

[node name="Drawing_Area" type="Sprite" parent="Area2D"]
modulate = Color( 1, 1, 1, 0.505882 )
position = Vector2( 41, 46 )
scale = Vector2( 0.760085, 0.9125 )
z_index = 1
texture = ExtResource( 2 )
centered = false

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.505882 )
position = Vector2( 512, 300 )
scale = Vector2( 1.08705, 1.07143 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 781.0
margin_top = 51.0
margin_right = 999.0
margin_bottom = 557.0

[node name="Back_Button" type="Button" parent="VBoxContainer"]
margin_right = 218.0
margin_bottom = 20.0
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 218.0
margin_bottom = 44.0

[node name="Pen_Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 107.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Pen"

[node name="Rubber_Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 218.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Rubber"

[node name="Erase_All_Button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 218.0
margin_bottom = 68.0
text = "Erase All"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 218.0
margin_bottom = 188.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 107.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="Thick_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 107.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Thick"

[node name="Colour_1_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 24.0
margin_right = 107.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Black"

[node name="Colour_2_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 48.0
margin_right = 107.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Red"

[node name="Colour_3_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 72.0
margin_right = 107.0
margin_bottom = 92.0
size_flags_horizontal = 3
text = "Green"

[node name="Colour_4_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 96.0
margin_right = 107.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "Beige"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 111.0
margin_right = 218.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="Thin_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_right = 107.0
margin_bottom = 20.0
text = "Thin"

[node name="Colour_5_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_top = 24.0
margin_right = 107.0
margin_bottom = 44.0
text = "White"

[node name="Colour_6_button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_top = 48.0
margin_right = 107.0
margin_bottom = 68.0
text = "Blue"

[node name="Colour_7_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_top = 72.0
margin_right = 107.0
margin_bottom = 92.0
text = "Orange"

[node name="Colour_8_Button" type="Button" parent="VBoxContainer/HBoxContainer2/VBoxContainer3"]
margin_top = 96.0
margin_right = 107.0
margin_bottom = 116.0
text = "Brown"

[node name="Node2D" type="Node2D" parent="VBoxContainer"]
position = Vector2( 0, 192 )
z_index = 100
z_as_relative = false

[node name="ColorPicker" type="ColorPicker" parent="VBoxContainer/Node2D"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
rect_scale = Vector2( 0.75, 0.75 )
presets_enabled = false
presets_visible = false
script = ExtResource( 3 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 773.0
margin_top = 447.0
margin_right = 982.0
margin_bottom = 510.0
min_value = 4.0
max_value = 20.0
value = 4.0

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="pressed" from="VBoxContainer/Back_Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Rubber_Button" to="." method="_on_Rubber_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Erase_All_Button" to="." method="_on_Erase_All_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/Thick_Button" to="." method="_on_Thick_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/Colour_1_Button" to="." method="_on_Colour_1_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/Colour_2_Button" to="." method="_on_Colour_2_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/Colour_3_Button" to="." method="_on_Colour_3_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer2/Colour_4_Button" to="." method="_on_Colour_4_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer3/Thin_Button" to="." method="_on_Thin_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer3/Colour_5_Button" to="." method="_on_Colour_5_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer3/Colour_6_button" to="." method="_on_Colour_6_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer3/Colour_7_Button" to="." method="_on_Colour_7_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/VBoxContainer3/Colour_8_Button" to="." method="_on_Colour_8_Button_pressed"]
[connection signal="color_changed" from="VBoxContainer/Node2D/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
